Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32121

Windows: Desktop OpenGL: render() not called when window shrinking in size

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.1.1
    • 5.1.0 RC1
    • GUI: OpenGL
    • None
    • Running on Windows 7. Installation is from qt-windows-opensource-5.1.0-rc2-mingw48_opengl-x86-offline
    • 49a55be9730bb30f36ba0e031717cc1f709ddd20

      The version is 5.1.0 RC2, but that can't be selected from the Affects Version/s drop down list!

      This short test program uses the openglwindow.h in examples/gui/openglwindow/openglwindow.h:

      #include <QtGui>
      #include "openglwindow.h"
      #include <QPainter>
      #include <iostream>

      class OpenGLFail : public OpenGLWindow
      {
      public:
      OpenGLFail();

      protected:
      void render(QPainter *p);
      };

      OpenGLFail::OpenGLFail()
      {
      setTitle("OpenGL Test");
      resize(500, 800);
      }

      void OpenGLFail::render(QPainter *p)
      {
      std::cout << "width(): " << width()
      << " height(): " << height() << endl;
      std::cout.flush();
      }

      int main(int argc, char *argv[])
      {
      QGuiApplication app(argc, argv);

      OpenGLFail test_window;

      test_window.show();

      app.exec();
      }

      As can be seen in the Application Output screen in QtCreator, the width and height do not display as the test window is reduced in size. This test program works fine in Qt 5.0.2

        1. openglerror.zip
          3 kB
          Mark Novak
        2. qtbug32121_angle.log
          0.9 kB
          Friedemann Kleint
        3. qtbug32121_diag.patch
          2 kB
          Friedemann Kleint
        4. qtbug32121_opengl.log
          1 kB
          Friedemann Kleint
        5. qtbug32121.tar
          20 kB
          Friedemann Kleint
        6. angle_shrink_wmpaint.stack
          4 kB
          Friedemann Kleint
        7. qtbug32121_examples_diag.patch
          4 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-32121
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            mrak Mark Novak
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes