Windows: Synthesize expose event for shrinking windows.

Synthesize expose events for all Windows except ANGLE-windows.

Task-number: QTBUG-32121

Change-Id: Ifbff2730ec8f2e8cfe23eeb4022b76a6e432598e
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>